2010-01-01  Juanma Barranquero  <lekktu@gmail.com>

	* org.el (org-get-outline-path, org-speed-command-help):
	Fix typos in error messages.

2009-12-14  Juri Linkov  <juri@jurta.org>

	* org-html.el (org-export-html-style-include-default):
	Put `safe-local-variable booleanp' on
	`org-export-html-style-include-default' instead of mistakenly
	duplicate `org-export-html-style'.

2009-11-20  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-agenda.el (org-agenda-diary-entry-in-org-file): Rebuild
	agenda after adding new entry.

	* org-datetree.el (org-datetree-find-day-create): Fix regular
	expression.

	* org.el (org-display-outline-path): Use a format specifier for
	message, to avoid problems with heading containing `%'.

	* org-agenda.el (org-agenda-hide-tags-regexp): New option.
	(org-format-agenda-item): Call `org-agenda-fix-displayed-tags'.
	(org-agenda-fix-displayed-tags): New function.
	(org-agenda-do-context-action): Just call
	`org-display-outline-path', without piping the result through
	`message'.

	* org-latex.el (org-export-latex-preprocess): Protect secondary
	footnote references.

	* org-indent.el (org-indent-initialize): Avoid empty strings as
	line prefixes.

	* org-agenda.el (org-agenda-diary-entry-in-org-file): Make sure
	hat checking for the mark does not throw an error.
	(org-agenda-diary-entry-in-org-file): Catch the case that there is
	not `day' text property in the cursor line.

	* org.el (org-sort-entries-or-items): Make sure that the final
	entry has a newline before doing the sorting.

	* org-agenda.el (org-agenda-diary-entry-in-org-file): Get the text
	property at the beginning of the line.

	* org.el (org-make-link-string): Don't allow a description with
	only white space.

	* org-agenda.el (org-agenda-insert-diary-strategy): New variable.
	(org-agenda-insert-diary-as-top-level): New function.
	(org-agenda-add-entry-to-org-agenda-diary-file): Call
	`org-agenda-insert-diary-as-top-level'.
